feat: add TU and TI